--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_graph1">Graph1Activity</string>
+    <string name="connect">연결</string>
+    <string name="server_IP">192.168.0.</string>
+    <string name="Main_message">RA#</string>
 </resources>
